// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonPill /> snapshot should match snapshot 1`] = `
<ButtonPill>
  <ButtonSimple
    aria-disabled={false}
    className="md-button-pill-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-grown={false}
    data-inverted={false}
    data-outline={false}
    data-shallow-disabled={false}
    data-size={40}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-grown={false}
          data-inverted={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <span>
            Example Text
          </span>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot when a ghost 1`] = `
<ButtonPill
  ghost={true}
>
  <ButtonSimple
    aria-disabled={false}
    className="md-button-pill-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={true}
    data-grown={false}
    data-inverted={false}
    data-outline={false}
    data-shallow-disabled={false}
    data-size={40}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={true}
          data-grown={false}
          data-inverted={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <span>
            Example Text
          </span>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot when a ghost and disabled 1`] = `
<ButtonPill
  disabled={true}
  ghost={true}
>
  <ButtonSimple
    aria-disabled={false}
    className="md-button-pill-wrapper"
    data-color="primary"
    data-disabled={true}
    data-ghost={true}
    data-grown={false}
    data-inverted={false}
    data-outline={false}
    data-shallow-disabled={false}
    data-size={40}
    isDisabled={true}
  >
    <FocusRing
      disabled={true}
    >
      <FocusRing
        disabled={true}
        focusClass="md-focus-ring-wrapper-disabled"
        focusRingClass="md-focus-ring-wrapper-disabled"
      >
        <button
          className="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="primary"
          data-disabled={true}
          data-ghost={true}
          data-grown={false}
          data-inverted={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <span>
            Example Text
          </span>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot when color is outlined 1`] = `
<ButtonPill
  outline={true}
>
  <ButtonSimple
    aria-disabled={false}
    className="md-button-pill-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-grown={false}
    data-inverted={false}
    data-outline={true}
    data-shallow-disabled={false}
    data-size={40}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-grown={false}
          data-inverted={false}
          data-outline={true}
          data-shallow-disabled={false}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <span>
            Example Text
          </span>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot when color is outlined and inverted is set 1`] = `
<ButtonPill
  inverted={true}
  outline={true}
>
  <ButtonSimple
    aria-disabled={false}
    className="md-button-pill-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-grown={false}
    data-inverted={true}
    data-outline={true}
    data-shallow-disabled={false}
    data-size={40}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-grown={false}
          data-inverted={true}
          data-outline={true}
          data-shallow-disabled={false}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <span>
            Example Text
          </span>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot when disabled 1`] = `
<ButtonPill
  disabled={true}
>
  <ButtonSimple
    aria-disabled={false}
    className="md-button-pill-wrapper"
    data-color="primary"
    data-disabled={true}
    data-ghost={false}
    data-grown={false}
    data-inverted={false}
    data-outline={false}
    data-shallow-disabled={false}
    data-size={40}
    isDisabled={true}
  >
    <FocusRing
      disabled={true}
    >
      <FocusRing
        disabled={true}
        focusClass="md-focus-ring-wrapper-disabled"
        focusRingClass="md-focus-ring-wrapper-disabled"
      >
        <button
          className="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="primary"
          data-disabled={true}
          data-ghost={false}
          data-grown={false}
          data-inverted={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <span>
            Example Text
          </span>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot when shallow disabled 1`] = `
<ButtonPill
  shallowDisabled={true}
>
  <ButtonSimple
    aria-disabled={true}
    className="md-button-pill-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-grown={false}
    data-inverted={false}
    data-outline={false}
    data-shallow-disabled={true}
    data-size={40}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          aria-disabled={true}
          className="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-grown={false}
          data-inverted={false}
          data-outline={false}
          data-shallow-disabled={true}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <span>
            Example Text
          </span>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot when width is grown 1`] = `
<ButtonPill
  grown={true}
>
  <ButtonSimple
    aria-disabled={false}
    className="md-button-pill-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-grown={true}
    data-inverted={false}
    data-outline={false}
    data-shallow-disabled={false}
    data-size={40}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-grown={true}
          data-inverted={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <span>
            Example Text
          </span>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot with className 1`] = `
<ButtonPill
  className="example-class"
>
  <ButtonSimple
    aria-disabled={false}
    className="md-button-pill-wrapper example-class"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-grown={false}
    data-inverted={false}
    data-outline={false}
    data-shallow-disabled={false}
    data-size={40}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-pill-wrapper example-class md-button-simple-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-grown={false}
          data-inverted={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        />
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot with color 1`] = `
<ButtonPill
  color="message"
>
  <ButtonSimple
    aria-disabled={false}
    className="md-button-pill-wrapper"
    data-color="message"
    data-disabled={false}
    data-ghost={false}
    data-grown={false}
    data-inverted={false}
    data-outline={false}
    data-shallow-disabled={false}
    data-size={40}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="message"
          data-disabled={false}
          data-ghost={false}
          data-grown={false}
          data-inverted={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <span>
            Example Text
          </span>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot with id 1`] = `
<ButtonPill
  id="example-id"
>
  <ButtonSimple
    aria-disabled={false}
    className="md-button-pill-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-grown={false}
    data-inverted={false}
    data-outline={false}
    data-shallow-disabled={false}
    data-size={40}
    id="example-id"
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-grown={false}
          data-inverted={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          id="example-id"
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        />
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot with size 1`] = `
<ButtonPill
  size={40}
>
  <ButtonSimple
    aria-disabled={false}
    className="md-button-pill-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-grown={false}
    data-inverted={false}
    data-outline={false}
    data-shallow-disabled={false}
    data-size={40}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-grown={false}
          data-inverted={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <span>
            Example Text
          </span>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot with style 1`] = `
<ButtonPill
  style={
    Object {
      "color": "pink",
    }
  }
>
  <ButtonSimple
    aria-disabled={false}
    className="md-button-pill-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-grown={false}
    data-inverted={false}
    data-outline={false}
    data-shallow-disabled={false}
    data-size={40}
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-grown={false}
          data-inverted={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "color": "pink",
            }
          }
          type="button"
        />
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot with title 1`] = `
<ButtonPill
  title="Example Text"
>
  <ButtonSimple
    aria-disabled={false}
    className="md-button-pill-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-grown={false}
    data-inverted={false}
    data-outline={false}
    data-shallow-disabled={false}
    data-size={40}
    title="Example Text"
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-grown={false}
          data-inverted={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          title="Example Text"
          type="button"
        />
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;
